# kernel

./: Cargo.toml  Makefile  build.rs  link.ld  output.asm  x86_64-kernel.json
.cargo/: config.toml
src/: boot.s  gdt.rs  interrupts.rs  lib.rs  main.rs  pic.rs  vga_driver.rs
src/arch/x86_64/: boot.asm  linker.ld  long_mode_init.asm
src/memory/: area_frame_allocator.rs  frame_allocator.rs  mod.rs  paging.rs
src/memory/allocator/: fixed_size_block.rs  linked_list.rs  mod.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
