[package]
name = "kernel"         # or any other name
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "staticlib" ]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]

[dependencies]
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
multiboot2 = {version = "0.23.0", default-features = false}
spin = "0.9.8"
volatile = "0.2.6"
