[package]
name = "kernel"         # or any other name
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "staticlib" ]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]

[dependencies]
volatile = "0.2.6"
spin = "0.10.0"
x86_64 = "0.15.2"
uart_16550 = "0.4.0"
multiboot2 = {version = "0.24.0", default-features = false}
pc-keyboard = "0.8.0"
bitflags = "2.6.0"
linked_list_allocator = "0.10.5"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

